# dnic-fakes

./: app.py  dnic_data_generator.py  fakes.ipynb  main.py  output.py  pyproject.toml
json_files/: appointments.json  payments.json  shifts.json  users.json
model/: appointments.py  payments.py  shifts.py  users.py
service/: dnic_data_generator.py
sql_scripts/: sql_appointment.txt  sql_payment.txt  sql_shift.txt  sql_user.txt
