[tool.poetry]
name = "dnic-fakes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dnic_fakes"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
